--- a/rsbc-ride-producer-api/openshift/producer-api-build.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-build.yml
@@ -10,7 +10,7 @@ objects:
   - kind: ImageStream
     apiVersion: v1
     metadata:
-      name: ${NAME}-${COMPONENT}-image
+      name: ${NAME}-${COMPONENT}-image-${BUILD_CONFIG_SUFFIX}
       labels:
         shared: "true"
   - kind: BuildConfig
@@ -36,10 +36,10 @@ objects:
       resources:
         limits:
           cpu: 1
-          memory: 8Gi
+          memory: 2Gi
         requests:
           cpu: 1
-          memory: 6Gi
+          memory: 3Gi
       strategy:
         type: Docker
         dockerStrategy:
@@ -133,7 +133,7 @@ objects:
       output:
         to:
           kind: ImageStreamTag
-          name: ${NAME}-${COMPONENT}-image:${VERSION}
+          name: ${NAME}-${COMPONENT}-image-${BUILD_CONFIG_SUFFIX}:${VERSION}
       # triggers:
       #   - type: ConfigChange
 parameters:
