--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -56,6 +56,7 @@ jobs:
   test_build:
     name: Test the Build
     runs-on: ubuntu-latest
+    needs: create_env_secrets
     environment: pr
     # env:
     #   build_config_name: "jh-etk-biadapter-buildconfig"
