--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -77,6 +77,7 @@ jobs:
       - name: Perform a test build
         run: |
           cd rsbc-ride-producer-api
+          chmod +x ./gradlew
           ./gradlew build -x test
 
 
