--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -58,11 +58,20 @@ jobs:
     runs-on: ubuntu-latest
     needs: create_env_secrets
     environment: pr
-    # env:
-    #   build_config_name: "jh-etk-biadapter-buildconfig"
-    #   base_image_tag: "1"
-    #   PR_NUMBER: ${{ github.event.number }}
-    #   PR_IMAGE_STREAM_TAG: pr-build-${{ github.sha}}
+    env:
+      APP_ACCEPTED_EVENT_TOPIC: ${{ secrets.APP_ACCEPTED_EVENT_TOPIC }}
+      TEST_EVENT_TOPIC: ${{ secrets.TEST_EVENT_TOPIC }}
+      DISCLOSURE_EVENT_TOPIC: ${{ secrets.DISCLOSURE_EVENT_TOPIC }}
+      EVSUBMITTED_EVENT_TOPIC=: ${{ secrets.EVSUBMITTED_EVENT_TOPIC= }}
+      KAFKA_SASL_CONFIG: ${{ secrets.KAFKA_SASL_CONFIG }}
+      KAFKA_SASL_MECH: ${{ secrets.KAFKA_SASL_MECH }}
+      KAFKA_SCHEMA_REGISTRY: ${{ secrets.KAFKA_SCHEMA_REGISTRY }}
+      KAFKA_SEC_PROTOCOL: ${{ secrets.KAFKA_SEC_PROTOCOL }}
+      KAFKA_SERVER: ${{ secrets.KAFKA_SERVER }}
+      SSL_PROTOCOL: ${{ secrets.SSL_PROTOCOL }}
+      SSL_TRUSTSTORE: ${{ secrets.SSL_TRUSTSTORE }}
+      SSL_TRUSTTORE_PASS: ${{ secrets.SSL_TRUSTTORE_PASS }}
+      SSL_TRUSTTORE_TYPE: ${{ secrets.SSL_TRUSTTORE_TYPE }}
 
 
     steps:
