--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -62,7 +62,7 @@ jobs:
       APP_ACCEPTED_EVENT_TOPIC: ${{ secrets.APP_ACCEPTED_EVENT_TOPIC }}
       TEST_EVENT_TOPIC: ${{ secrets.TEST_EVENT_TOPIC }}
       DISCLOSURE_EVENT_TOPIC: ${{ secrets.DISCLOSURE_EVENT_TOPIC }}
-      EVSUBMITTED_EVENT_TOPIC=: ${{ secrets.EVSUBMITTED_EVENT_TOPIC= }}
+      EVSUBMITTED_EVENT_TOPIC: ${{ secrets.EVSUBMITTED_EVENT_TOPIC= }}
       KAFKA_SASL_CONFIG: ${{ secrets.KAFKA_SASL_CONFIG }}
       KAFKA_SASL_MECH: ${{ secrets.KAFKA_SASL_MECH }}
       KAFKA_SCHEMA_REGISTRY: ${{ secrets.KAFKA_SCHEMA_REGISTRY }}
