--- a/.github/workflows/build_check.yml
+++ b/.github/workflows/build_check.yml
@@ -8,6 +8,7 @@ on:
       - 'master'
       - 'feature/buildpushpr'
       - 'maincomponent/**'
+      - 'feature/producerapi-deployv1'
 
 jobs:
   test_build:
