--- a/.github/workflows/build_push_pr_onsync_prdeploy.yml
+++ b/.github/workflows/build_push_pr_onsync_prdeploy.yml
@@ -30,7 +30,7 @@ jobs:
           git config --global user.name "ride_actions"
           git config --global pull.rebase true
           ls -a
-          cd rsbc-ride-adapters
+          cd jag-rsbc-ride
           git fetch
           git branch -a
           git checkout $GITHUB_HEAD_REF      
