--- a/rsbc-ride-producer-api/openshift/producer-api-build-secret.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-build-secret.yml
@@ -46,7 +46,7 @@ parameters:
     name: NAME
     value: ride
   - name: COMPONENT
-    value: producer-api
+    value: producer-api-build-secret
   - name: VERSION
     value: pr
   - name: NAMESPACE
