--- a/.github/workflows/build_push_pr_onsync_prdeploy.yml
+++ b/.github/workflows/build_push_pr_onsync_prdeploy.yml
@@ -79,6 +79,41 @@ jobs:
         run: |
           oc create secret generic kafka-cert-secret-build-${{ env.APP_VERSION }} --dry-run=true --from-file=./ca.p12 -o yaml | oc apply -f -
 
+
+  build_push:
+    name: Build and Push the image
+    runs-on: ubuntu-latest
+    environment: pr
+    needs: [merge_pr_local,create_env_secrets]
+    env:
+      build_config_name: "ride-producer-api-build-pr"
+      PR_NUMBER: ${{ github.event.number }}
+      # base_image_tag: "1"
+      # PR_NUMBER: ${{ github.event.number }}
+      # PR_IMAGE_STREAM_TAG: pr-build-${{ github.sha}}
+
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3      
+      - name: Authenticate and set context
+        uses: redhat-actions/oc-login@v1.1.2
+        with:
+          openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL_SILVER }}
+          openshift_token: ${{ secrets.OPENSHIFT_SA_PIPELINE_TOKEN_SILVER }}
+          namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools"
+      - name: Apply Build Yaml
+        run: |
+          cd rsbc-ride-producer-api/openshift
+          oc process -f producer-api-build.yml --param SOURCE_REPOSITORY_REF=tempbranch/pr-${{ env.PR_NUMBER }} --param-file producer-api-build-pr-params.yml --param VERSION=$GITHUB_SHA | oc apply -f -
+          
+      - name: Start the build and push
+        run: |
+          oc start-build ${{ env.build_config_name }} --follow --wait
+
+
+  
+
       
 
   # build_pr:
