--- a/rsbc-ride-producer-api/openshift/producer-api-build-pr-params.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-build-pr-params.yml
@@ -5,3 +5,4 @@ BUILD_CONFIG_SUFFIX: pr
 COMPONENT: producer-api-build
 SOURCE_CONTEXT_DIR: rsbc-ride-producer-api
 SOURCE_REPOSITORY_URL: https://github.com/bcgov/jag-rsbc-ride
+BUILD_SECRET_NAME: producer-api-build-secret
