--- a/.github/workflows/build_push_pr_onsync_prdeploy.yml
+++ b/.github/workflows/build_push_pr_onsync_prdeploy.yml
@@ -164,7 +164,7 @@ jobs:
       - name: Update hpa pr name
         uses: mikefarah/yq@v4.28.1
         with:
-          cmd: yq eval -i '.spec.scaleTargetRef.name = "ride-producer-api-pr-${{env.PR_NUMBER}}"' 'overlays/pr/custom-hpa-ride-producer-api.yaml'
+          cmd: yq eval -i '.spec.scaleTargetRef.name = "ride-producer-api-pr-${{env.PR_NUMBER}}"' 'overlays/pr/custom-hpa-ride-producer-api.yml'
       - name: Check Changed value
         run: |
           cat overlays/pr/kustomization.yaml
