--- a/.github/workflows/build_push_pr_onopen_devdeploy.yml
+++ b/.github/workflows/build_push_pr_onopen_devdeploy.yml
@@ -1,4 +1,4 @@
-name: Build, Push and deploy for PR-On Open new PR from release branch to devbranch
+name: Build, Push and deploy for PR-On Open new PR from release branch to devbranch(Deploy to Dev)
 on:
   pull_request:
     types: [opened, reopened,edited,synchronize]
