--- a/rsbc-ride-producer-api/openshift/producer-api-build.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-build.yml
@@ -129,7 +129,7 @@ objects:
               secretKeyRef:
                 key: TEST_EVENT_TOPIC
                 name: ${NAME}-${BUILD_SECRET_NAME}-${BUILD_CONFIG_SUFFIX}
-          dockerfilePath: Dockerfile.native.multistage
+          dockerfilePath: Dockerfile.multistage
       output:
         to:
           kind: ImageStreamTag
