--- a/rsbc-ride-producer-api/workflows_backups/v1/build_push_pr_onopen_testdeploy.yml
+++ b/rsbc-ride-producer-api/workflows_backups/v1/build_push_pr_onopen_testdeploy.yml
@@ -1,9 +1,9 @@
-name: Build, Push and deploy for PR-On Open new PR from release branch to main branch(Deploy to PROD)
+name: Build, Push and deploy for PR-On Open new PR from release branch to test branch(Deploy to Test)
 on:
   pull_request:
     types: [opened, reopened,edited,synchronize]
     branches:   
-      - 'maincomponent/producerapi'
+      - 'maincomponent/producerapi_testbranch'
       # - 'master'
       # - 'release**'
 
@@ -16,7 +16,7 @@ jobs:
       # build_config_name: "ride-vips-adapter-nginx-proxy-build-v2"
       # base_image_tag: "1"
       PR_NUMBER: ${{ github.event.number }}
-      # PR_IMAGE_STREAM_TAG: pr-build-${{ github.sha}}
+      PR_IMAGE_STREAM_TAG: pr-build-${{ github.sha}}
 
 
     steps:
@@ -33,17 +33,17 @@ jobs:
           git checkout $GITHUB_HEAD_REF      
           git checkout $GITHUB_BASE_REF  
           git merge $GITHUB_HEAD_REF 
-          git checkout -b tempbranch_proddeploy/pr-${{ env.PR_NUMBER }}
+          git checkout -b tempbranch_testdeploy/pr-${{ env.PR_NUMBER }}
           git remote add testbranch https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-          git push -u testbranch tempbranch_proddeploy/pr-${{ env.PR_NUMBER }}
+          git push -u testbranch tempbranch_testdeploy/pr-${{ env.PR_NUMBER }}
 
   create_env_secrets:
     name: Create Env secret
     runs-on: ubuntu-latest
     needs: merge_pr_local
-    environment: prod
+    environment: test
     env:
-      APP_VERSION: "prod"
+      APP_VERSION: "test"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3      
@@ -61,8 +61,8 @@ jobs:
         uses: redhat-actions/oc-login@v1.1.2
         with:
           openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL_SILVER }}
-          openshift_token: ${{ secrets.OPENSHIFT_SA_PIPELINE_TOKEN_SILVER_PROD }}
-          namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-prod"
+          openshift_token: ${{ secrets.OPENSHIFT_SA_PIPELINE_TOKEN_SILVER_TEST }}
+          namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-test"
       - name: Get Cluster ca secret for build
         run: |
           oc get secret ${{ secrets.CLUSTER_CA_SECRET_NAME }} -o jsonpath='{.data.ca\.p12}' | base64 -d -i > ca.p12
@@ -80,10 +80,10 @@ jobs:
   build_push:
     name: Build and Push the image
     runs-on: ubuntu-latest
-    environment: prod
+    environment: test
     needs: [merge_pr_local,create_env_secrets]
     env:
-      build_config_name: "ride-producer-api-build-prod"
+      build_config_name: "ride-producer-api-build-test"
       PR_NUMBER: ${{ github.event.number }}
       # base_image_tag: "1"
       # PR_NUMBER: ${{ github.event.number }}
@@ -102,7 +102,7 @@ jobs:
       - name: Apply Build Yaml
         run: |
           cd rsbc-ride-producer-api/openshift
-          oc process -f producer-api-build.yml --param SOURCE_REPOSITORY_REF=tempbranch_proddeploy/pr-${{ env.PR_NUMBER }} --param-file producer-api-build-prod-params.yml --param VERSION=$GITHUB_SHA | oc apply -f -
+          oc process -f producer-api-build.yml --param SOURCE_REPOSITORY_REF=tempbranch_testdeploy/pr-${{ env.PR_NUMBER }} --param-file producer-api-build-test-params.yml --param VERSION=$GITHUB_SHA | oc apply -f -
           
       - name: Start the build and push
         run: |
@@ -116,12 +116,12 @@ jobs:
           cd jag-rsbc-ride
           git fetch
           git remote add testbranch https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-          git push -d testbranch tempbranch_proddeploy/pr-${{ env.PR_NUMBER }}
+          git push -d testbranch tempbranch_testdeploy/pr-${{ env.PR_NUMBER }}
 
 
 
-  deploy_prod_argocd:
-    name: Push to Gitops repo for prod deployment via Argocd
+  deploy_test_argocd:
+    name: Push to Gitops repo for test deployment via Argocd
     runs-on: ubuntu-latest
     needs: [merge_pr_local,create_env_secrets,build_push]
     env:
@@ -142,10 +142,10 @@ jobs:
       #     git pull
       #     git checkout -b pr-branch-${{env.PR_NUMBER}}  
       #     git push -u origin pr-branch-${{env.PR_NUMBER}} 
-      - name: Update Image tag for prod deploy
+      - name: Update Image tag for test deploy
         uses: mikefarah/yq@v4.28.1
         with:
-          cmd: yq eval -i '.images[0].newTag = "${{env.PR_IMAGE_STREAM_TAG}}"' 'overlays/prod/kustomization.yaml'
+          cmd: yq eval -i '.images[0].newTag = "${{env.PR_IMAGE_STREAM_TAG}}"' 'overlays/test/kustomization.yaml'
       # - name: Update name suffix for Dev deploy
       #   uses: mikefarah/yq@v4.28.1
       #   with:
@@ -158,10 +158,10 @@ jobs:
       #   uses: mikefarah/yq@v4.28.1
       #   with:
       #     cmd: yq eval -i '.commonLabels.app = "ride-producer-api-pr-${{env.PR_NUMBER}}"' 'overlays/pr/kustomization.yaml'
-      - name: Update release name for prod deploy
+      - name: Update release name for test deploy
         uses: mikefarah/yq@v4.28.1
         with:
-          cmd: yq eval -i '.commonAnnotations.release_name = "${{env.RELEASE_NAME}}"' 'overlays/prod/kustomization.yaml'
+          cmd: yq eval -i '.commonAnnotations.release_name = "${{env.RELEASE_NAME}}"' 'overlays/test/kustomization.yaml'
       # - name: Update hpa Dev name
       #   uses: mikefarah/yq@v4.28.1
       #   with:
@@ -169,15 +169,15 @@ jobs:
       - name: Update sha annotation
         uses: mikefarah/yq@v4.28.1
         with:
-          cmd: yq eval -i '.commonAnnotations.commit_sha = "${{env.PR_IMAGE_STREAM_TAG}}"' 'overlays/prod/kustomization.yaml'
+          cmd: yq eval -i '.commonAnnotations.commit_sha = "${{env.PR_IMAGE_STREAM_TAG}}"' 'overlays/test/kustomization.yaml'
       - name: Check Changed value
         run: |
-          cat overlays/prod/kustomization.yaml
+          cat overlays/dev/kustomization.yaml
       - name: Push Changes
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
-          git commit -m "updated prod deploy details to prod overlay yaml"
+          git commit -m "updated test deploy details to test overlay yaml"
           git push -u origin deployment/rsbc-ride-producer-api
         
