--- a/rsbc-ride-producer-api/src/main/resources/application.properties
+++ b/rsbc-ride-producer-api/src/main/resources/application.properties
@@ -5,7 +5,16 @@
 # quarkus.container-image.group=${IMAGE_NAMESPACE}
 # quarkus.container-image.name=${IMAGE_NAME}
 # quarkus.container-image.tag=${IMAGE_TAG}
-
+quarkus.swagger-ui.always-include=true
+quarkus.smallrye-openapi.info-title=RIDE Producer API
+quarkus.smallrye-openapi.info-version=1.0
+quarkus.smallrye-openapi.info-description=API for external systems to send events to RIDE
+quarkus.smallrye-openapi.info-terms-of-service=TBD
+quarkus.smallrye-openapi.info-contact-email=RSIOpsSupport@gov.bc.ca
+quarkus.smallrye-openapi.info-contact-name=RSO Ops Support
+quarkus.smallrye-openapi.info-contact-url=https://github.com/bcgov/jag-rsbc-ride
+quarkus.smallrye-openapi.info-license-name=Apache 2.0
+quarkus.smallrye-openapi.info-license-url=https://www.apache.org/licenses/LICENSE-2.0.html
 
 
 # Kafka general parameters
