--- a/rsbc-ride-producer-api/build.gradle
+++ b/rsbc-ride-producer-api/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation 'io.quarkus:quarkus-avro'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'io.apicurio:apicurio-registry-utils-serde:1.3.2.Final'
+    implementation 'io.quarkus:quarkus-smallrye-openapi:3.0.0.Alpha1'
 
     // implementation group: 'io.quarkus', name: 'quarkus-vertx-http', version: '2.14.1.Final'
 
