--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.5.2
-Django==4.1.3
-sqlparse==0.4.3
-tzdata==2022.6
+Django==3.2.15
+djongo==1.3.6
+pymongo==3.12.3
+pytz==2022.6
+sqlparse==0.2.4
