--- a/rsbc-ride-producer-api/src/main/resources/application.properties
+++ b/rsbc-ride-producer-api/src/main/resources/application.properties
@@ -24,6 +24,9 @@ kafka.sasl.mechanism=${KAFKA_SASL_MECH}
 kafka.sasl.jaas.config=${KAFKA_SASL_CONFIG};
 kafka.schema.registry.url=${KAFKA_SCHEMA_REGISTRY}
 
+quarkus.mongodb.connection-string =
+quarkus.mongodb.database = 
+
 
 # Configuring Test event channel
 
