--- a/rsbc-ride-producer-api/src/main/resources/application.properties
+++ b/rsbc-ride-producer-api/src/main/resources/application.properties
@@ -24,8 +24,8 @@ kafka.sasl.mechanism=${KAFKA_SASL_MECH}
 kafka.sasl.jaas.config=${KAFKA_SASL_CONFIG};
 kafka.schema.registry.url=${KAFKA_SCHEMA_REGISTRY}
 
-quarkus.mongodb.connection-string =
-quarkus.mongodb.database = 
+quarkus.mongodb.connection-string = ${MONGO_CONN_STR}
+quarkus.mongodb.database = ${AUTH_DB_NAME}
 
 
 # Configuring Test event channel
