--- a/rsbc-ride-producer-api/openshift/producer-api-build-secret.yml
+++ b/rsbc-ride-producer-api/openshift/producer-api-build-secret.yml
@@ -39,6 +39,8 @@ objects:
       SSL_TRUSTTORE_PASS: ${SSL_TRUSTTORE_PASS}
       SSL_TRUSTTORE_TYPE: ${SSL_TRUSTTORE_TYPE}
       TEST_EVENT_TOPIC: ${TEST_EVENT_TOPIC}
+      MONGO_CONN_STR: ${MONGO_CONN_STR}
+      AUTH_DB_NAME: ${AUTH_DB_NAME}
     type: Opaque
 parameters:
   - description: The name of the application for labelling all artifacts.
@@ -67,3 +69,5 @@ parameters:
   - name: SSL_TRUSTTORE_PASS
   - name: SSL_TRUSTTORE_TYPE
   - name: TEST_EVENT_TOPIC
+  - name: AUTH_DB_NAME
+  - name: MONGO_CONN_STR
