added publish to decoded topic

--- a/event-consumer-module/src/main/resources/application.properties
+++ b/event-consumer-module/src/main/resources/application.properties
@@ -42,6 +42,17 @@ mp.messaging.incoming.incoming-testevent.auto.offset.reset=latest
 
 
 
+# Configuring outgoing Test event channel
+
+mp.messaging.outgoing.outgoing-testevent.connector=smallrye-kafka
+mp.messaging.outgoing.outgoing-testevent.topic=${TEST_EVENT_SINK_TOPIC}
+mp.messaging.outgoing.outgoing-testevent.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.outgoing-testevent.ssl.protocol=${SSL_PROTOCOL}
+mp.messaging.outgoing.outgoing-testevent.ssl.truststore.location=${SSL_TRUSTSTORE}
+mp.messaging.outgoing.outgoing-testevent.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
+mp.messaging.outgoing.outgoing-testevent.ssl.truststore.type=${SSL_TRUSTTORE_TYPE}
+
+
 
 
 
