added key ser to string

--- a/event-consumer-module/src/main/resources/application.properties
+++ b/event-consumer-module/src/main/resources/application.properties
@@ -47,6 +47,7 @@ mp.messaging.incoming.incoming-testevent.auto.offset.reset=latest
 mp.messaging.outgoing.outgoing-testevent.connector=smallrye-kafka
 mp.messaging.outgoing.outgoing-testevent.topic=${TEST_EVENT_SINK_TOPIC}
 mp.messaging.outgoing.outgoing-testevent.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.outgoing-testevent.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.outgoing-testevent.ssl.protocol=${SSL_PROTOCOL}
 mp.messaging.outgoing.outgoing-testevent.ssl.truststore.location=${SSL_TRUSTSTORE}
 mp.messaging.outgoing.outgoing-testevent.ssl.truststore.password=${SSL_TRUSTTORE_PASS}
