--- a/event-consumer-module/src/main/resources/application.properties
+++ b/event-consumer-module/src/main/resources/application.properties
@@ -143,7 +143,7 @@ mp.messaging.incoming.incoming-evidencesubmit.ssl.truststore.type=${SSL_TRUSTTOR
 mp.messaging.incoming.incoming-evidencesubmit.specific.avro.reader=true
 mp.messaging.incoming.incoming-evidencesubmit.apicurio.registry.auto-register=true
 mp.messaging.incoming.incoming-evidencesubmit.enable.auto.commit=false
-mp.messaging.incoming.incoming-evidencesubmit.group.id=dfdisclosuresentGrp
+mp.messaging.incoming.incoming-evidencesubmit.group.id=dfevusbmittedGrp
 mp.messaging.incoming.incoming-evidencesubmit.partitions=10
 mp.messaging.incoming.incoming-evidencesubmit.auto.offset.reset=latest
 
@@ -181,7 +181,7 @@ mp.messaging.incoming.incoming-payreceived.ssl.truststore.type=${SSL_TRUSTTORE_T
 mp.messaging.incoming.incoming-payreceived.specific.avro.reader=true
 mp.messaging.incoming.incoming-payreceived.apicurio.registry.auto-register=true
 mp.messaging.incoming.incoming-payreceived.enable.auto.commit=false
-mp.messaging.incoming.incoming-payreceived.group.id=dfdisclosuresentGrp
+mp.messaging.incoming.incoming-payreceived.group.id=dfpayrecvdGrp
 mp.messaging.incoming.incoming-payreceived.partitions=10
 mp.messaging.incoming.incoming-payreceived.auto.offset.reset=latest
 
@@ -219,7 +219,7 @@ mp.messaging.incoming.incoming-reviewscheduled.ssl.truststore.type=${SSL_TRUSTTO
 mp.messaging.incoming.incoming-reviewscheduled.specific.avro.reader=true
 mp.messaging.incoming.incoming-reviewscheduled.apicurio.registry.auto-register=true
 mp.messaging.incoming.incoming-reviewscheduled.enable.auto.commit=false
-mp.messaging.incoming.incoming-reviewscheduled.group.id=dfdisclosuresentGrp
+mp.messaging.incoming.incoming-reviewscheduled.group.id=dfrevschedGrp
 mp.messaging.incoming.incoming-reviewscheduled.partitions=10
 mp.messaging.incoming.incoming-reviewscheduled.auto.offset.reset=latest
 
